[gd_scene load_steps=5 format=3 uid="uid://dwu22s2k4r6tn"]

[ext_resource type="Script" uid="uid://duqxsahb1gumm" path="res://menus/player_customizer.gd" id="1_vcl4n"]
[ext_resource type="Texture2D" uid="uid://4bhq3ps2xb1d" path="res://menus/circle.png" id="2_vcl4n"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3yqv7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ptt2r"]
bg_color = Color(0, 0, 0, 1)

[node name="PlayerCustomizer" type="PanelContainer"]
custom_minimum_size = Vector2(288, 648)
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 378.0
grow_vertical = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_3yqv7")
script = ExtResource("1_vcl4n")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="Panel" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ptt2r")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Panel"]
layout_mode = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="PlayerLabel" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Player 1"
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("2_vcl4n")
stretch_mode = 3

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ColorPicker" type="ColorPicker" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/CenterContainer"]
layout_mode = 2
edit_alpha = false
edit_intensity = false
picker_shape = 2
can_add_swatches = false
sampler_visible = false
color_modes_visible = false
sliders_visible = false
hex_visible = false
presets_visible = false

[connection signal="color_changed" from="MarginContainer/Panel/MarginContainer/VBoxContainer/CenterContainer/ColorPicker" to="." method="_on_color_picker_color_changed"]
